--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -66,6 +66,7 @@
 \newcommand{\ko}{\dagger}
 \newcommand{\start}{\ast}
 
+\DeclareMathOperator\erf{erf}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
@@ -404,6 +405,17 @@ we take $\proton$ as an experiment-dependent input, and it appears that we get r
 	\proton \simeq \proton_0 + \left(\proton_\infty-\proton_0\right) \dfrac{t}{t+t_h} = \proton_\infty + \left(\proton_0 - \proton_\infty\right) \dfrac{t_h}{t+t_h},
 \end{equation}
 and we use this equation to fit the current data as indicated on Figure \ref{fig:protons}. It is important to remember that $\proton_\infty$ depends on $\LiAllOut$.
+We inject an integrated function
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+t_h & = & \dfrac{A_h}{\erf\left(B_h\LiAllOut\right)}\\
+A_h & = & 0.0404981 \pm 0.006\text{ s}\\
+B_h & = & 0.0341778 \pm 0.013\text{ M}^{-1}\\ 
+\end{array}
+\right.
+\end{equation}
+
 
 \begin{figure}[!ht]
 \begin{center}
