ready to adjust parameters...

--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -412,7 +412,7 @@ From the measurements, we use an heuristic expression for $\proton$ dynamics dep
 \begin{array}{rcl}
 t_h & = & \dfrac{A_h}{\erf\left(B_h\LiAllOut\right)}\\
 A_h & = & 24.7      \pm 3.2 \text{ s}\\
-B_h & = & 0.034     \pm 0.011\text{ M}^{-1}\\ 
+B_h & = & 0.034     \pm 0.011\text{ mM}^{-1}\\ 
 \end{array}
 \right.
 \end{equation}
@@ -422,7 +422,7 @@ and
 \begin{array}{rcl}
 \pH_0      & = & 5.92 \pm 0.2 \\
 \pH_\infty & = & \pH_0 + \left(7.40-\pH_0\right) \dfrac{\LiAllOut}{\LiAll_h+\LiAllOut}\\
-\LiAll_h   & = & 15.2\pm4.2\text{ M}\\
+\LiAll_h   & = & 15.2\pm4.2\text{ mM}\\
 \end{array}
 \right.
 \end{equation}
