--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -676,15 +676,22 @@ This means that one $\hat\alpha_\infty = \cos^2 \Omega $ is computed, this impos
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
-	\partial_t \hat\alpha & = & k_0 \left[ \eta(\proton) - \left[ \omega^2 \proton + \eta(\proton) \right] \hat\alpha \right]\\
-	 & = & f(t) - \left[ f(t) + g(t) \right] \hat\alpha\\
-	 f(u) & = & k_0 \eta\left( \proton(u) \right) \\
-	 g(u) & = & k_0 \omega^2 \proton(u)\\
+	\partial_t \hat\alpha & = & k_0 \left[ \dfrac{\eta(\proton)}{\eta_0} - \left[ \omega^2 \dfrac{\proton}{\proton_0} + \dfrac{\eta(\proton)}{\eta_0} \right] \hat\alpha \right], \;\; \omega^2 = \dfrac{\eta_\infty}{\eta_0}\dfrac{\proton_0}{\proton_\infty}\tan^2\Omega\\
+	\\
+	\rho(u) & = & \dfrac{\proton}{\proton_0}\\
+	\dfrac{\eta(\proton)}{\eta_0} & \simeq & \rho( v_0 t) = \tilde\rho(t) \\
+	v_0 & = & \dfrac{p_\eta}{1+\left(\frac{\proton_0}{h_\eta}\right)^{p_\eta}}\simeq 0.233\text{ for $\pH_0=5.92$, does not depend on $t_h$}\\
+	\\
+\partial_t\hat\alpha	 & = &  f(v_0t) - \left[ \omega^2 f(t) +  f(v_0t) \right] \hat\alpha,\;\;f(t) = k_0 \dfrac{\proton}{\proton_0}\\
 	 F(t) & = & \int_0^t f(u) \; \mathrm{d}u \\
-	 G(t) & = & \int_0^t g(u) \; \mathrm{d}u \\
-	 \hat\alpha(t) & = & \left[ 1 + \int_0^t f(u) e^{\left[F(u)+G(u)\right]}\;\mathrm{d}u\right] e^{-\left[F(t)+G(t)\right]}\\
+	 \tilde F(t) & = & \int_0^t f(v_0 u) \; \mathrm{d}u = \dfrac{1}{v_0} F(v_0t)\\
 \end{array}
 \right.
+\end{equation}
+
+\begin{equation}
+		 \hat\alpha(t) =  \left[ 1 + \int_0^t f(v_0u) e^{\left[\omega^2 F(u)+\frac{1}{v_0}F(v_0u)\right]}\;\mathrm{d}u\right]
+		  e^{-\left[\omega^2 F(t)+\frac{1}{v_0}F(v_0 t)\right]}
 \end{equation}
 
 %We write
