--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -702,6 +702,15 @@ This means that one $\hat\alpha_\infty = \cos^2 \Omega $ is computed, this impos
 \begin{equation}
  F(t) =  k_0 \left[ (1-\delta_h) t + \delta_h t_h \ln\left( 1+ \dfrac{t}{t_h}\right)\right]
 \end{equation}
+
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+	\partial_t \beta_x  & = & k_x \left[ \Theta\left( 1 + \mu_x \rho(t) \hat\alpha(t) \right)- \beta_x\right]\\
+\end{array}
+\right.
+\end{equation}
+
 %We write
 %\begin{equation}
 % \partial_t \hat\alpha =  k_0 \eta_0 \left[ \dfrac{\eta( \proton )}{\eta_0} \left(1-\hat\alpha\right) 
