need to keep more term for integration

--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -707,6 +707,8 @@ This means that one $\hat\alpha_\infty = \cos^2 \Omega $ is computed, this impos
 \left\lbrace
 \begin{array}{rcl}
 	\partial_t \beta_x  & = & k_x \left[ \Theta\left( 1 + \mu_x \rho(t) \hat\alpha(t) \right)- \beta_x\right]\\
+	\\
+	\beta_x(t) & = & k_x\left[ \int_0^t \left[ \Theta\left( 1 + \mu_x \rho(u) \hat\alpha(u) \right) \right] e^{k_xu} \; \mathrm{d} u \right] e^{-k_x t}\\
 \end{array}
 \right.
 \end{equation}
