simplification at first order...

--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -709,6 +709,23 @@ This means that one $\hat\alpha_\infty = \cos^2 \Omega $ is computed, this impos
 \right.
 \end{equation}
 
+For $t\leq t_h$,
+\begin{equation}
+\left\lbrace
+\begin{array}{rcl}
+	f(t) & \simeq & k_0 \left[1-\delta_h \dfrac{t}{t_h}\right]\\
+	\\
+	f(v_0u) & \simeq & 	k_0 \left[1-\delta_h \dfrac{v_0u}{t_h}\right]\\
+	\\
+	F(t) & \simeq & k_0 t \left[1 - \dfrac{\delta_h}{2}\dfrac{t}{t_h}\right]\\
+	\\
+	\dfrac{1}{v_0} F(v_0t) & \simeq & k_0 t \left[ 1 - \dfrac{\delta_h}{2}\dfrac{v_0t}{t_h}\right] \\
+	\\
+	\omega^2 F(t) + \dfrac{1}{v_0} F(v_0t)& \simeq & k_0 t \left[ (1+\omega^2) - \dfrac{\delta_h\left(\omega^2+v_0\right)}{2} \dfrac{t}{t_h}\right]\\
+\end{array}
+\right.
+\end{equation}
+
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
