no, nothing to do...

--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -709,7 +709,7 @@ This means that one $\hat\alpha_\infty = \cos^2 \Omega $ is computed, this impos
 \right.
 \end{equation}
 
-For $t\leq t_h$,
+For $t\ll t_h$,
 \begin{equation}
 \left\lbrace
 \begin{array}{rcl}
