--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -679,7 +679,7 @@ This means that one $\hat\alpha_\infty = \cos^2 \Omega $ is computed, this impos
 	\partial_t \hat\alpha & = & k_0 \left[ \dfrac{\eta(\proton)}{\eta_0} - \left[ \omega^2 \dfrac{\proton}{\proton_0} + \dfrac{\eta(\proton)}{\eta_0} \right] \hat\alpha \right], \;\; \omega^2 = \dfrac{\eta_\infty}{\eta_0}\dfrac{\proton_0}{\proton_\infty}\tan^2\Omega\\
 	\\
 	\rho(u) & = & \dfrac{\proton}{\proton_0}\\
-	\dfrac{\eta(\proton)}{\eta_0} & \simeq & \rho( v_0 t) = \tilde\rho(t) \\
+	\dfrac{\eta(\proton)}{\eta_0} & \simeq & \rho( v_0 t)  \\
 	v_0 & = & \dfrac{p_\eta}{1+\left(\frac{\proton_0}{h_\eta}\right)^{p_\eta}}\simeq 0.233\text{ for $\pH_0=5.92$, does not depend on $t_h$}\\
 	\\
 \partial_t\hat\alpha	 & \simeq &  f(v_0t) - \left[ \omega^2 f(t) +  f(v_0t) \right] \hat\alpha,\;\;f(t) = k_0 \rho(t) \\
