preparing functions to change parameters

--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -566,8 +566,13 @@ From \eqref{eq:speedup}, we gain the expression of the \underline{catalytic rati
 \begin{equation}
 \label{eq:mu_def}
 	\dfrac{\proton_0 E_0 \Upsilon_7}{k_7} = \Theta \underbrace{\left(s_0-1\right) 
-	\dfrac{ \sigma' }{\kappa'}}_{\mu}.
+	\dfrac{ \sigma' }{\kappa'}}_{\mu},
 \end{equation}
+leading to
+\begin{equation}
+	\mu = \dfrac{ r_0 \sigma' \left(s_0-1\right) - \epsilon_6\left(1-r_0\sigma\right)}{\epsilon_7 r_0 + \epsilon_6 }
+\end{equation}
+
 We inject this expression into to get the ratios:
 \begin{equation}
 \left\lbrace
