--- a/src/lithium/supmat/supmat.tex
+++ b/src/lithium/supmat/supmat.tex
@@ -82,6 +82,11 @@
 \title{Supplementary Material...}
 \maketitle
 
+\section{TODO}
+\begin{itemize}
+\item calculer dose réponse PS120....
+\end{itemize}
+
 \section{Setting up the Model}
 
 \subsection{Description And Notations}
